--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2207,19 +2207,22 @@ table td{}
 }
 
 .home-acces ul li div.hacc1 {
-    background-image: url("../../public/images/couples/1.jpg");
+    background-image: url('/images/slick-1.jpeg');
 }
 
 .home-acces ul li div.hacc2 {
-    background-image: url("../../public/images/couples/2.jpg");
+    background-image: url('/images/slick-2.jpeg');
+    background-size: cover;
 }
 
 .home-acces ul li div.hacc3 {
-    background-image: url("../../public/images/couples/11.jpg");
+    background-image: url('/images/slick-3.jpeg');
+    background-size: cover;
+    background-position: center center;
 }
 
 .home-acces ul li div.hacc4 {
-    background-image: url("../../public/images/couples/4.jpg");
+    background-image: url('/images/slick-4.jpeg');
 }
 
 .home-acces ul li div.hacc .con {
