--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3682,7 +3682,7 @@ span.mail::before {
 }
 
 .links a,
-.links span {
+.links span , .link button {
     background: rgb(255, 255, 255);
     border: 1px solid rgb(225, 231, 236);
     color: rgb(51, 51, 51);
